fixed image alignment issue for dashboard/view , replaced generic css and removed duplicate css

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -2521,45 +2521,6 @@ tags-input-grpc .autocomplete {
   top: -32px;
   right: 0; }
 
-.dashboard-create-popup .modal-header {
-  background-color: #f6f8f8; }
-
-.dashboard-create-popup .dashboard-icon {
-  height: 20px;
-  width: 20px;
-  display: inline-block;
-  float: left;
-  margin-bottom: -20px; }
-
-.dashboard-create-popup .dashboard-cancle-icon {
-  height: 15px;
-  width: 15px;
-  display: inline-block;
-  float: right;
-  margin-top: -20px; }
-
-.dashboard-create-popup .image-upload-holder {
-  margin-top: 5px;
-  background-color: #f2fbfe;
-  border-radius: 8px 8px;
-  padding: 8px 8px;
-  box-sizing: border-box; }
-  .dashboard-create-popup .image-upload-holder .image-upload-inner {
-    border: 1px dashed #439dd3;
-    border-radius: 8px 8px;
-    padding: 15px 0;
-    text-align: center; }
-
-.dashboard-create-popup .image-disc {
-  margin-top: 7px;
-  font-size: 15px; }
-
-.dashboard-create-popup input {
-  border-radius: 10px; }
-
-.dashboard-create-popup .uploaded-image {
-  float: right; }
-
 .connection-create-popup .modal-header {
   background-color: #f6f8f8; }
 
@@ -2612,45 +2573,6 @@ tags-input-grpc .autocomplete {
   position: absolute;
   top: -32px;
   right: 0; }
-
-.view-create-popup .modal-header {
-  background-color: #f6f8f8; }
-
-.view-create-popup .view-icon {
-  height: 20px;
-  width: 20px;
-  display: inline-block;
-  float: left;
-  margin-bottom: -20px; }
-
-.view-create-popup .view-cancle-icon {
-  height: 15px;
-  width: 15px;
-  display: inline-block;
-  float: right;
-  margin-top: -25px; }
-
-.view-create-popup .image-upload-holder {
-  margin-top: 5px;
-  background-color: #f2fbfe;
-  border-radius: 8px 8px;
-  padding: 8px 8px;
-  box-sizing: border-box; }
-  .view-create-popup .image-upload-holder .image-upload-inner {
-    border: 1px dashed #439dd3;
-    border-radius: 8px 8px;
-    padding: 15px 0;
-    text-align: center; }
-
-.view-create-popup .image-disc {
-  margin-top: 7px;
-  font-size: 15px; }
-
-.view-create-popup input {
-  border-radius: 10px; }
-
-.view-create-popup .uploaded-image {
-  float: right; }
 
 /* Gridstack Styles*/
 .grid-stack .grid-stack-item .ui-draggable-handle {
@@ -6348,3 +6270,13 @@ input.select2-active {
 
 .common-create-popup .uploaded-image {
   float: right; }
+
+.common-create-popup .form-group .img-label {
+  margin-bottom: 0px; }
+
+.common-create-popup .form-group .row {
+  padding-top: 5px;
+  margin-left: 0px;
+  margin-right: 0px; }
+  .common-create-popup .form-group .row img {
+    max-width: 100%; }
